--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - api-build:/opt/application/api-build
       - /data/demo-storage:/data/storage
     env_file: api/production.env
+    environment:
+      API_SECRET: ${API_SECRET}
     healthcheck:
       test: curl -s -w '%{http_code}' http://localhost:3000/api/describe
       timeout: 5s
