--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -2,6 +2,7 @@ FROM alpine:latest
 
 COPY crontabs /etc/crontabs2
 
-CMD cat /etc/crontabs2/* | crontab - \
+CMD echo -n $API_SECRET > /tmp/secret \
+  & cat /etc/crontabs2/* | crontab - \
   && crond -f -d 8
 
